src/test/deca/context/invalid/class/surcharge/from_superclass.deca
// Description:
//    Surcharge de méthode de la superclasse
//
// Resultats:
//    Wrong signature

class B {
	void m() {}
}

class A extends B {
	void m(int a) {}
}

{

}

